src/objects/Flight_Info__c.object
<CustomObject>
    <fields>
        <fullName>AircraftId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Aircraft Id</label>
        <referenceTo>Aircraft__c</referenceTo>
        <relationshipLabel>Flight Infos</relationshipLabel>
        <relationshipName>Flight_Infos</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_available_seats__c</fullName>
        <label>Business available seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_time_of_Flight__c</fullName>
        <label>Date time of Flight</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Departure__c</fullName>
        <label>Departure</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kiev</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Copenhagen</fullName>
                </value>
                <value>
                    <fullName>Cairo</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Madrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kiev</fullName>
                </value>
                <value>
                    <fullName>Brasilia</fullName>
                </value>
                <value>
                    <fullName>Copenhagen</fullName>
                </value>
                <value>
                    <fullName>Cairo</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Paris</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Madrid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Economy_available_seats__c</fullName>
        <label>Economy available seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finish_flight_time__c</fullName>
        <label>Finish flight time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Flight_Distance__c</fullName>
        <label>Flight Distance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flight Info</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Flight Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flight Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Departute_Can_Not_be_Equals_Destination</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT( Departure__c )   =   TEXT( Destination__c )</errorConditionFormula>
        <errorMessage>Departure and Destination can not be the same</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Distance_greater_zero</fullName>
        <active>true</active>
        <errorConditionFormula>Flight_Distance__c  &lt;= 0</errorConditionFormula>
        <errorDisplayField>Flight_Distance__c</errorDisplayField>
        <errorMessage>Distance can not be  less than zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Finish_flight_must_be_after_start</fullName>
        <active>true</active>
        <errorConditionFormula>Date_time_of_Flight__c  &gt;=  Finish_flight_time__c</errorConditionFormula>
        <errorDisplayField>Finish_flight_time__c</errorDisplayField>
        <errorMessage>Finish light must be after start</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_flight_greater_now</fullName>
        <active>true</active>
        <errorConditionFormula>Date_time_of_Flight__c  &lt;=  NOW()</errorConditionFormula>
        <errorDisplayField>Date_time_of_Flight__c</errorDisplayField>
        <errorMessage>Start flight day must be greater than now</errorMessage>
    </validationRules>
</CustomObject>